src/objects/NokiaCPQ_Site__c.object
<CustomObject>
    <description>List of sites tied to Quote/Proposal</description>
    <fields>
        <fullName>NokiaCPQ_Address__c</fullName>
        <description>Defines Address for the site.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Additional Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_Site_Opportunity_Name__c</fullName>
        <formula>Opportunity__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Sites</relationshipLabel>
        <relationshipName>Sites</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Site</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Site Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sites</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>